--- a/configs/mwpl_ballistic_asmodeus_defconfig
+++ b/configs/mwpl_ballistic_asmodeus_defconfig
@@ -30,3 +30,6 @@ BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_KMOD_XZ=y
 BR2_PACKAGE_HOST_MTOOLS=y
+
+# Init System
+BR2_INIT_SYSTEMD=y
