mwpl_ballistic_asmodeus: add dynamic root password generation and export
Introduce automatic generation of a random root password in the mpv_build
script and export it via BR2_ROOT_PASSWORD for use in the defconfig.
The generated password is hashed (SHA-512) and escaped for Buildroot,
then written to output/images/root_password for reference.

Update mwpl_ballistic_asmodeus_defconfig to use BR2_TARGET_GENERIC_ROOT_PASSWD
sourced from the exported BR2_ROOT_PASSWORD variable.

Signed-off-by: Maksym Prymierov <primerovmax@gmail.com>

--- a/configs/mwpl_ballistic_asmodeus_defconfig
+++ b/configs/mwpl_ballistic_asmodeus_defconfig
@@ -33,3 +33,6 @@ BR2_PACKAGE_HOST_MTOOLS=y
 
 # Init System
 BR2_INIT_SYSTEMD=y
+
+# User Configs
+BR2_TARGET_GENERIC_ROOT_PASSWD="${BR2_ROOT_PASSWORD}"
