configs: enable net-tools in mwpl_ballistic_asmodeus_defconfig
Add the net-tools package to the Asmodeus defconfig to provide
basic CLI networking utilities (ifconfig, route, netstat).

Signed-off-by: Maksym Prymierov <primerovmax@gmail.com>

--- a/configs/mwpl_ballistic_asmodeus_defconfig
+++ b/configs/mwpl_ballistic_asmodeus_defconfig
@@ -36,3 +36,6 @@ BR2_INIT_SYSTEMD=y
 
 # User Configs
 BR2_TARGET_GENERIC_ROOT_PASSWD="${BR2_ROOT_PASSWORD}"
+
+# CLI Tools
+BR2_PACKAGE_NET_TOOLS=y
