configs: enable NetworkManager and nmcli in Asmodeus defconfig
Add NetworkManager with CLI support to manage network interfaces
and connections on the Asmodeus target.

Signed-off-by: Maksym Prymierov <primerovmax@gmail.com>

--- a/configs/mwpl_ballistic_asmodeus_defconfig
+++ b/configs/mwpl_ballistic_asmodeus_defconfig
@@ -39,3 +39,5 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="${BR2_ROOT_PASSWORD}"
 
 # CLI Tools
 BR2_PACKAGE_NET_TOOLS=y
+BR2_PACKAGE_NETWORK_MANAGER=y
+BR2_PACKAGE_NETWORK_MANAGER_CLI=y
